[package]
name = "funkin-multiplayer-server"
version = "0.1.0"
authors = ["Daniel Conley <himself@danii.dev>", "Alek Evans <contact@alekeagle.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
serde = {version = "1.0.124", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1.3.0", features = ["full"]}
warp = {git = "https://github.com/danii/warp.git"}
